[package]
name = "russh-ssh-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = [
    "io-util",
    "rt-multi-thread",
    "time",
    "net",
    "sync",
    "macros",
    "process",
] }
tokio-util = "0.7"
russh = { version = "0.39.0",features = ["openssl"]}
russh-keys = {version = "0.38.0",features = ["vendored-openssl"]}
anyhow = "1.0"
env_logger = "0.10"
rand = "0.8.5"
nix = "0.25"
libc = "0.2.95"
log = "0.4"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
warp = "0.3"
signal-hook = "0.1.16"
tokio-stream = "0.1.14"
bytebuffer = "2.1.0"
pty-process = {version = "0.4.0",features = ["async"]}
russh-sftp = "1.2.1"
bytes = "1.0"
serde = {version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_urlencoded  ="0.7"
chrono = {version= "0.4"}